# api-db-forge

./: .gitignore
dbotapi/: DOC_academy.md  README.md  main.py  pyproject.toml
dbotapi/DBotapiServer/: manage.py
dbotapi/DBotapiServer/DBotapiServer/: asgi.py  exceptions.py  settings.py  urls.py  wsgi.py
dbotapi/DBotapiServer/academy/: DOC_academy.md  models.py  renderer.py  serializers.py  urls.py  views.py
dbotapi/DBotapiServer/academy/migrations/: 0001_initial.py  0002_alter_educationalmaterials_id_ed_materials.py  0003_alter_educationalmaterials_id_ed_materials.py
dbotapi/DBotapiServer/api_server/: backends.py  models.py  renderers.py  serializers.py  urls.py  utils.py  views.py
dbotapi/DBotapiServer/api_server/migrations/: 0001_initial.py
dbotapi/DBotapiServer/driving_school/: models.py  renderer.py  serializers.py  urls.py  views.py
dbotapi/DBotapiServer/driving_school/migrations/: 0001_initial.py  0002_alter_driving_telegram_id_student_and_more.py  0002_remove_commission_username_telegram.py  0003_alter_grouptheory_name_group.py  0003_commission_status_alter_commission_email.py  0004_alter_groups_telegram_id_student.py  0004_moderators_delete_commission.py  0005_remove_moderators_status_remove_student_status_and_more.py  0006_alter_moderators_is_active_alter_student_is_active_and_more.py  0007_alter_driving_errors.py
dbotapi/DBotapiServer/static/: token.key
